--- a/src/app/event-list/event-item/event-item.component.html
+++ b/src/app/event-list/event-item/event-item.component.html
@@ -1,3 +1,3 @@
-<li class="list-group-item mb-1 font-weight-bold text-secondary">
+<li class="list-group-item mb-1 font-weight-bold text-secondary" (click)="onClick()">
   {{event}}
 </li>
